Fix button that change size of grid. Now is working hover effect and the grid is resizing correctly.

--- a/style.css
+++ b/style.css
@@ -3,18 +3,24 @@
     padding: 0;
     box-sizing: border-box;
     background-color: rgb(155, 11, 11);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
-.title {
+#title {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     font-size: 72px;
     color: rgb(250, 202, 112);
-    -webkit-text-stroke: 2px black; /* width and color */
+    -webkit-text-stroke: 3px black;
     font-weight: bold;
     font-style: italic;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-bottom: 30px;
+}
+
+#option {
+    display: flex;
+    justify-content: center;
 }
 
 #container {
@@ -33,5 +39,14 @@
 
 .permahover {
     background-color: black;
+}
+
+button {
+    color: rgb(250, 202, 112);
+    font-weight: bold;
+    border: 3px solid black;
+    border-radius: 8px;
+    background: rgb(155, 11, 11);
+    padding: 8px 16px;
 }
 
