--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
 
-/* body {
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
-} */
+}
 
 #title {
     margin-top: 20px;
@@ -31,22 +31,21 @@
 }
 
 #container {
+    max-width: 720px;
+    margin-top: 30px;
     display: flex;
     flex-wrap: nowrap;
     justify-content:center;
-    color: black;
-    padding: 50px 10px;
 }
 
 .newDiv {
     background-color: rgb(250, 202, 112);
-    border: 1px solid black;
-    padding: 8px;   
+    border: 1px dotted rgb(44, 43, 43);
 }
 
-/* .permahover {
+.permahover {
     background-color: black;
-} */
+}
 
 button {
     color: rgb(250, 202, 112);
